# arpgstats

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  arpgstats.h  base.h  creature.cpp  creature.h  item.cpp  item.h  misc.cpp  misc.h  mods.cpp  mods.h
data/niflhel/: combine.py  main.csv  pull.sh
data/test/: combined.csv  currencies.csv  monsters.csv
doc/: Abilities.md  Items.md  Modifiers.md
tests/: creature_test.cpp  item_test.cpp  mods_test.cpp  stats_test.cpp
